c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/union_initializers/scalar_union_initializer.c
/* You can't initialize a union with a scalar value */
union u {int a;};

int main(void){
    union u my_union = 1;
    return 0;
}